mysql-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: serverbd
  labels:
    app: basedatos
spec:
  ports:
  - protocol: "TCP"
    port: 3306
    targetPort: 3306
  selector:
    app: basedatos
    tier: mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basedatos
  labels:
    app: basedatos
    tier: mysql
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: basedatos
      tier: mysql
  template:
    metadata:
      labels:
        app: basedatos
        tier: mysql
    spec:
      containers:
      - image: joan17240549/wetcrud2
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-ps
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-ps
        persistentVolumeClaim:
          claimName: mysql-persistent-claim
