ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.jcastaneda.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wet-php
            port:
              number: 80
